cmake_minimum_required(VERSION 3.8)
project(worker)

set(CMAKE_CXX_STANDARD 11)


add_subdirectory(evpp)
add_subdirectory(evnsq)


set(SOURCE_FILES
        decode/decode_frames.cpp
        decode/decode_frames.h
        decode/decode_test.cpp
        decode/export_frames.cpp
        decode/extract_flows.cpp
        decode/extract_flows.h
        flow/flow_test.cpp
        flow/trans_frames.cpp
        flow/trans_frames.h
        hiredis-vip/adapters/ae.h
        hiredis-vip/adapters/glib.h
        hiredis-vip/adapters/libev.h
        hiredis-vip/adapters/libevent.h
        hiredis-vip/adapters/libuv.h
        hiredis-vip/examples/example-ae.c
        hiredis-vip/examples/example-glib.c
        hiredis-vip/examples/example-libev.c
        hiredis-vip/examples/example-libevent.c
        hiredis-vip/examples/example-libuv.c
        hiredis-vip/examples/example.c
        hiredis-vip/adlist.c
        hiredis-vip/adlist.h
        hiredis-vip/async.c
        hiredis-vip/async.h
        hiredis-vip/command.c
        hiredis-vip/command.h
        hiredis-vip/crc16.c
        hiredis-vip/dict.c
        hiredis-vip/dict.h
        hiredis-vip/fmacros.h
        hiredis-vip/hiarray.c
        hiredis-vip/hiarray.h
        hiredis-vip/hircluster.c
        hiredis-vip/hircluster.h
        hiredis-vip/hiredis.c
        hiredis-vip/hiredis.h
        hiredis-vip/hiutil.c
        hiredis-vip/hiutil.h
        hiredis-vip/net.c
        hiredis-vip/net.h
        hiredis-vip/read.c
        hiredis-vip/read.h
        hiredis-vip/sds.c
        hiredis-vip/sds.h
        hiredis-vip/test.c
        hiredis-vip/win32.h
        libnsq/command.c
        libnsq/http.c
        libnsq/http.h
        libnsq/json.c
        libnsq/json.h
        libnsq/message.c
        libnsq/nsq.h
        libnsq/nsqd_connection.c
        libnsq/nsqlookupd.c
        libnsq/reader.c
        libnsq/test.c
        libnsq/utlist.h
        rapidjson/example/capitalize/capitalize.cpp
        rapidjson/example/condense/condense.cpp
        rapidjson/example/filterkey/filterkey.cpp
        rapidjson/example/filterkeydom/filterkeydom.cpp
        rapidjson/example/jsonx/jsonx.cpp
        rapidjson/example/lookaheadparser/lookaheadparser.cpp
        rapidjson/example/messagereader/messagereader.cpp
        rapidjson/example/parsebyparts/parsebyparts.cpp
        rapidjson/example/pretty/pretty.cpp
        rapidjson/example/prettyauto/prettyauto.cpp
        rapidjson/example/schemavalidator/schemavalidator.cpp
        rapidjson/example/serialize/serialize.cpp
        rapidjson/example/simpledom/simpledom.cpp
        rapidjson/example/simplepullreader/simplepullreader.cpp
        rapidjson/example/simplereader/simplereader.cpp
        rapidjson/example/simplewriter/simplewriter.cpp
        rapidjson/example/tutorial/tutorial.cpp
        rapidjson/include/rapidjson/error/en.h
        rapidjson/include/rapidjson/error/error.h
        rapidjson/include/rapidjson/internal/biginteger.h
        rapidjson/include/rapidjson/internal/diyfp.h
        rapidjson/include/rapidjson/internal/dtoa.h
        rapidjson/include/rapidjson/internal/ieee754.h
        rapidjson/include/rapidjson/internal/itoa.h
        rapidjson/include/rapidjson/internal/meta.h
        rapidjson/include/rapidjson/internal/pow10.h
        rapidjson/include/rapidjson/internal/regex.h
        rapidjson/include/rapidjson/internal/stack.h
        rapidjson/include/rapidjson/internal/strfunc.h
        rapidjson/include/rapidjson/internal/strtod.h
        rapidjson/include/rapidjson/internal/swap.h
        rapidjson/include/rapidjson/msinttypes/inttypes.h
        rapidjson/include/rapidjson/msinttypes/stdint.h
        rapidjson/include/rapidjson/allocators.h
        rapidjson/include/rapidjson/document.h
        rapidjson/include/rapidjson/encodedstream.h
        rapidjson/include/rapidjson/encodings.h
        rapidjson/include/rapidjson/filereadstream.h
        rapidjson/include/rapidjson/filewritestream.h
        rapidjson/include/rapidjson/fwd.h
        rapidjson/include/rapidjson/istreamwrapper.h
        rapidjson/include/rapidjson/memorybuffer.h
        rapidjson/include/rapidjson/memorystream.h
        rapidjson/include/rapidjson/ostreamwrapper.h
        rapidjson/include/rapidjson/pointer.h
        rapidjson/include/rapidjson/prettywriter.h
        rapidjson/include/rapidjson/rapidjson.h
        rapidjson/include/rapidjson/reader.h
        rapidjson/include/rapidjson/schema.h
        rapidjson/include/rapidjson/stream.h
        rapidjson/include/rapidjson/stringbuffer.h
        rapidjson/include/rapidjson/writer.h
        rapidjson/test/perftest/misctest.cpp
        rapidjson/test/perftest/perftest.cpp
        rapidjson/test/perftest/perftest.h
        rapidjson/test/perftest/platformtest.cpp
        rapidjson/test/perftest/rapidjsontest.cpp
        rapidjson/test/perftest/schematest.cpp
        rapidjson/test/unittest/allocatorstest.cpp
        rapidjson/test/unittest/bigintegertest.cpp
        rapidjson/test/unittest/documenttest.cpp
        rapidjson/test/unittest/dtoatest.cpp
        rapidjson/test/unittest/encodedstreamtest.cpp
        rapidjson/test/unittest/encodingstest.cpp
        rapidjson/test/unittest/filestreamtest.cpp
        rapidjson/test/unittest/fwdtest.cpp
        rapidjson/test/unittest/istreamwrappertest.cpp
        rapidjson/test/unittest/itoatest.cpp
        rapidjson/test/unittest/jsoncheckertest.cpp
        rapidjson/test/unittest/namespacetest.cpp
        rapidjson/test/unittest/ostreamwrappertest.cpp
        rapidjson/test/unittest/pointertest.cpp
        rapidjson/test/unittest/prettywritertest.cpp
        rapidjson/test/unittest/readertest.cpp
        rapidjson/test/unittest/regextest.cpp
        rapidjson/test/unittest/schematest.cpp
        rapidjson/test/unittest/simdtest.cpp
        rapidjson/test/unittest/strfunctest.cpp
        rapidjson/test/unittest/stringbuffertest.cpp
        rapidjson/test/unittest/strtodtest.cpp
        rapidjson/test/unittest/unittest.cpp
        rapidjson/test/unittest/unittest.h
        rapidjson/test/unittest/valuetest.cpp
        rapidjson/test/unittest/writertest.cpp
        json_func.cpp
        json_func.h
        queue_test.cpp
        redis_helper.cpp
        redis_helper.h
        redis_test.cpp
        universal_worker.cpp
        universal_worker.h)

add_subdirectory(evpp)
add_subdirectory(evnsq)

add_executable(worker ${SOURCE_FILES})